name:    vcd
version: 0.2.0

category: Data, Hardware, Embedded

synopsis: Reading and writing VCD files.

description:
  VCD (value change dump) is a format for capturing digital and analog waveforms.
  GTKWave is a popular viewer of VCD files.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.6

library
    build-depends:
        base       >= 4.0   && < 5.0,
        tree-ctor  >= 0.0.0 && < 0.1,
        polyparse  >= 1.4

    exposed-modules:
        Data.VCD

    ghc-options:       -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/vcd.git

