name:    vcd
version: 0.3.0

category: Data, Hardware, Embedded

synopsis: Reading and writing VCD files.

description:
  Defined by the Verilog standard, VCD (value change dump) is a file format for
  capturing digital and analog waveforms, typically from HDL simulation.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.8

library
  build-depends:
   base       >= 4.0 && < 5.0,
   polyparse  >= 1.4 && < 2.0

  exposed-modules:
    Data.VCD
    Data.VCD.Tree

  extensions: FlexibleInstances, UndecidableInstances
  ghc-options: -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/vcd.git

